# -*- coding: utf-8 -*-
# vim: set fileencoding=utf-8

CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

###
##  \Section project main info
###
SET (PROJECTNAME "antiquacrm")
SET (DISPLAYNAME "Antiqua CRM")
SET (DESCRIPTION "A Qt5/C++ based CRM with PSQL bindings for antiques dealers.")
SET (HOMEPAGEURL "https://antiquacrm.hjcms.de")
SET (ANTIQUACRM_VERSION_MAJOR 0)
SET (ANTIQUACRM_VERSION_MINOR 0)
SET (ANTIQUACRM_VERSION_RELEASE 2)
SET (ANTIQUACRM_VERSION_STRING "0.0.2")
# If Git is installed and a '.git' directory is found,
# we append the Git revision to ANTIQUACRM_VERSION_STRING
IF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/.git")
  FIND_PROGRAM (GIT_EXECUTABLE NAMES git)
  IF (GIT_EXECUTABLE)
    SET (antiquacrm_git_revision "")
    MESSAGE (STATUS "Found git: ${GIT_EXECUTABLE}")
    EXECUTE_PROCESS (COMMAND ${GIT_EXECUTABLE} rev-parse --short HEAD
      WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
      OUTPUT_VARIABLE antiquacrm_git_revision
      OUTPUT_STRIP_TRAILING_WHITESPACE)
    SET (ANTIQUACRM_VERSION_STRING "${ANTIQUACRM_VERSION_STRING}.git(${antiquacrm_git_revision})")
  ENDIF (GIT_EXECUTABLE)
ENDIF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/.git")

PROJECT(${PROJECTNAME} 
  VERSION ${ANTIQUACRM_VERSION_MAJOR}.${ANTIQUACRM_VERSION_MINOR}.${ANTIQUACRM_VERSION_RELEASE}
  DESCRIPTION ${DESCRIPTION}
  HOMEPAGE_URL ${HOMEPAGEURL}
  LANGUAGES CXX
)

###
## \Section CPack
###
SET (CPACK_RESOURCE_FILE_LICENSE LICENSE)
SET (CPACK_RESOURCE_FILE_README README)

###
## \Section Build System
###
SET(CMAKE_AUTOUIC OFF)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTORCC ON)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(PROJECT_BINDINGS
 Core
 Widgets
 Sql
 Network
 LinguistTools
)

FIND_PACKAGE(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS ${PROJECT_BINDINGS})
FIND_PACKAGE(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS ${PROJECT_BINDINGS})

###
## \Section Headers
###
CONFIGURE_FILE (src/version.h.cmake
  ${CMAKE_CURRENT_BINARY_DIR}/src/version.h
)

SET (PROJECT_INCLUDE_DIRS
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}/src
  ${CMAKE_CURRENT_SOURCE_DIR}/src
)

ADD_SUBDIRECTORY (src)

##############################################################
## LGPL/GPL3 Exceptions
##############################################################

SET (PROJECT_DOCUMENTS
 README
 AUTHORS
 ChangeLog
 LICENCE
)

INSTALL (FILES
  ${PROJECT_DOCUMENTS}
  DESTINATION share/${CMAKE_PROJECT_NAME}
  COMPONENT data
)

##EOF
