# -*- coding: utf-8 -*-
# vim: set fileencoding=utf-8
#
# SPDX-License-Identifier: LGPL-3.0-or-later
#

CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
ENABLE_LANGUAGE(CXX)

###
##  \Section project main info
###
SET (PROJECTNAME "antiquacrm")
SET (DISPLAYNAME "AntiquaCRM")
SET (DESCRIPTION "Application for Managing antiquarian Books")
SET (HOMEPAGEURL "https://www.hjcms.de")
SET (ANTIQUACRM_DOMAIN_SCOPE "de.hjcms.${PROJECTNAME}")
SET (ANTIQUACRM_VERSION_MAJOR 1)
SET (ANTIQUACRM_VERSION_MINOR 1)
SET (ANTIQUACRM_VERSION_RELEASE 0)
SET (ANTIQUACRM_VERSION_STRING "${ANTIQUACRM_VERSION_MAJOR}.${ANTIQUACRM_VERSION_MINOR}.${ANTIQUACRM_VERSION_RELEASE}")
## @see src/antiquacrm.rc
SET (ANTIQUACRM_VERSION_FILEOS "${ANTIQUACRM_VERSION_MAJOR},${ANTIQUACRM_VERSION_MINOR},${ANTIQUACRM_VERSION_RELEASE},0")
### Required for Package building
## https://www.rfc-editor.org/rfc/rfc4122.html#section-4.3
SET (RFC4122_DNS_NAMESPACE 6ba7b810-9dad-11d1-80b4-00c04fd430c8)
STRING (UUID ANTIQUACRM_DNSID NAMESPACE ${RFC4122_DNS_NAMESPACE} NAME "hjcms.de" TYPE SHA1 UPPER)
SET (RFC4122_URL_NAMESPACE 6ba7b811-9dad-11d1-80b4-00c04fd430c8)
STRING (UUID ANTIQUACRM_URLID NAMESPACE ${RFC4122_URL_NAMESPACE} NAME "https://hjcms.de" TYPE SHA1 UPPER)
SET (RFC4122_ISO_NAMESPACE 6ba7b812-9dad-11d1-80b4-00c04fd430c8)
STRING (UUID ANTIQUACRM_APPID NAMESPACE ${RFC4122_ISO_NAMESPACE} NAME "AntiquaCRM" TYPE SHA1 UPPER)

PROJECT(${PROJECTNAME} 
  VERSION ${ANTIQUACRM_VERSION_MAJOR}.${ANTIQUACRM_VERSION_MINOR}.${ANTIQUACRM_VERSION_RELEASE}
  DESCRIPTION ${DESCRIPTION}
  HOMEPAGE_URL ${HOMEPAGEURL}
  LANGUAGES CXX
)

CONFIGURE_FILE (version.txt.cmake
  ${CMAKE_CURRENT_SOURCE_DIR}/version.txt
)

IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/custom-config.cmake)
  MESSAGE(STATUS "Using Custom config")
  include(${CMAKE_CURRENT_SOURCE_DIR}/custom-config.cmake)
ENDIF()

###
## \Section Build System
##
## https://doc.qt.io/qt-6/supported-platforms.html
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -W -Wall -Wno-implicit-fallthrough -Werror")
SET(CMAKE_AUTOUIC OFF)
SET(CMAKE_AUTORCC OFF)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_CONFIGURATION_TYPES Debug Release MinSizeRel)

## Enables some Development options and tracing
OPTION (ANTIQUA_DEVELOPEMENT "Enable development macro code" OFF)
IF (ANTIQUA_DEVELOPEMENT)
  ADD_DEFINITIONS (-DANTIQUA_DEVELOPEMENT)
  SET (QT_VERSION_STRING "6.2.4")
  SET (QT_INSTALL_PREFIX "$ENV{HOME}/Programme/Qt/${QT_VERSION_STRING}/gcc_64")
  SET (QT_INSTALL_PREFIX_CMAKE_DIR "$ENV{HOME}/Programme/Qt/${QT_VERSION_STRING}/gcc_64/lib/cmake")
  SET (QT_QMAKE_EXECUTABLE "${QT_INSTALL_PREFIX}/bin/qmake")
  SET (CMAKE_PREFIX_PATH ${QT_INSTALL_PREFIX})
  SET (CMAKE_BUILD_TYPE "Debug")
  MESSAGE(STATUS "CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH}")
  ## Project
  SET (ANTIQUACRM_DATA_TARGET "${CMAKE_CURRENT_SOURCE_DIR}/src/data")
  SET (ANTIQUACRM_PLUGIN_TARGET "${CMAKE_CURRENT_BINARY_DIR}/src/plugins/antiquacrm")
  SET (ANTIQUACRM_TRANSLATION_TARGET "${CMAKE_CURRENT_BINARY_DIR}/src/i18n")
ELSE(ANTIQUA_DEVELOPEMENT)
  IF (CMAKE_HOST_WIN32)
    SET (ANTIQUACRM_DATA_TARGET "data")
    SET (ANTIQUACRM_PLUGIN_TARGET "plugins/antiquacrm")
    SET (ANTIQUACRM_TRANSLATION_TARGET "i18n")
    SET (ANTIQUACRM_INNOSETUP_BINDIR "${CMAKE_CURRENT_BINARY_DIR}")
    SET (ANTIQUACRM_INNOSETUP_SRCDIR "${CMAKE_CURRENT_SOURCE_DIR}")
  ELSE (CMAKE_HOST_WIN32)
    SET (ANTIQUACRM_DATA_TARGET "${CMAKE_INSTALL_PREFIX}/share/${PROJECTNAME}/data")
    SET (ANTIQUACRM_PLUGIN_TARGET "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/antiquacrm/plugins")
    SET (ANTIQUACRM_TRANSLATION_TARGET "${CMAKE_INSTALL_PREFIX}/share/${PROJECTNAME}/i18n")
  ENDIF (CMAKE_HOST_WIN32)
ENDIF (ANTIQUA_DEVELOPEMENT)

## https://ccache.dev/
FIND_PROGRAM (CCACHE_EXECUTABLE NAMES ccache)
IF (CCACHE_EXECUTABLE)
  MESSAGE (STATUS "Compiler ccache found.")
  SET_PROPERTY (GLOBAL PROPERTY RULE_LAUNCH_COMPILE ${CCACHE_EXECUTABLE})
  SET_PROPERTY (GLOBAL PROPERTY RULE_LAUNCH_LINK ${CCACHE_EXECUTABLE})
ENDIF ()

IF(CMAKE_MODULE_PATH)
  MESSAGE(STATUS "APPEND ${CMAKE_SOURCE_DIR}/Modules")
  SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_SOURCE_DIR}/Modules")
ELSE()
  SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/Modules")
ENDIF()
MESSAGE(STATUS "CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}")

## Zlib
FIND_PACKAGE(ZLIB REQUIRED)
IF (NOT ZLIB_FOUND)
 MESSAGE (FATAL_ERROR "Requires gzip compression for Network connections!")
ELSE (NOT ZLIB_FOUND)
 MESSAGE (STATUS "Found ZLIB: ${ZLIB_LIBRARIES}")
ENDIF (NOT ZLIB_FOUND)

## libqrencode
## https://github.com/fukuchi/libqrencode
FIND_PACKAGE(QRENCODE REQUIRED)
IF (QRENCODE_FOUND)
 MESSAGE (STATUS "Found QRENCODE: ${QRENCODE_LIBRARIES}")
ELSE (QRENCODE_FOUND)
 MESSAGE (FATAL_ERROR "libqrencode, QR Code library not found!")
ENDIF (QRENCODE_FOUND)

SET(PROJECT_BINDINGS
 Core
 Widgets
 Sql
 Network
 Xml
 Charts
 LinguistTools
 PrintSupport
)

IF (CMAKE_HOST_UNIX)
 FIND_PACKAGE(X11)
  IF(X11_FOUND)
   MESSAGE (STATUS "ENABLE IPC/DBus Support")
   SET(PROJECT_BINDINGS
    ${PROJECT_BINDINGS}
    DBus
   )
 ENDIF(X11_FOUND)
 OPTION (WITH_ANTIQUACMD "With antiquacmd cron application." OFF)
ENDIF (CMAKE_HOST_UNIX)

IF (CMAKE_HOST_WIN32)
  SET(PROJECT_BINDINGS
   ${PROJECT_BINDINGS}
   WinExtras
  )
ENDIF (CMAKE_HOST_WIN32)

FIND_PACKAGE(Qt6 REQUIRED COMPONENTS ${PROJECT_BINDINGS})

###
## \Section Includes
###
SET (ANTIQUACRM_INCLUDE_DIRS
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}
  ${ZLIB_INCLUDE_DIRS}
)

###
## \Section SubTargets
###
ADD_SUBDIRECTORY (templates)
ADD_SUBDIRECTORY (src)

##EOF
