# -*- coding: utf-8 -*-
# vim: set fileencoding=utf-8

CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

project(antiquacmd)

###
## \Section Build System
###
SET(CMAKE_AUTOUIC OFF)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTORCC ON)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/modules")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -W -Wall -Wno-implicit-fallthrough -Werror")

## Enables some Development options and tracing
OPTION (ANTIQUA_DEVELOPEMENT "Enable development macro code" ON)
IF (ANTIQUA_DEVELOPEMENT)
 MESSAGE (TRACE "ANTIQUA_DEVELOPEMENT enabled by default!")
 ADD_DEFINITIONS (-DANTIQUA_DEVELOPEMENT)
 SET (ANTIQUACRM_DATA_TARGET "${CMAKE_CURRENT_SOURCE_DIR}/src/data")
 FIND_PATH (INCLUDE_ANTIQUACRM_DEVEL "aglobal.h"
  ../v1/src/lib
  [NO_DEFAULT_PATH | NO_CMAKE_SYSTEM_PATH | NO_CMAKE_FIND_ROOT_PATH]
 )
ELSE(ANTIQUA_DEVELOPEMENT)
  SET (ANTIQUACRM_LIB_SUFFIX "64")
  SET (ANTIQUACRM_DATA_TARGET "${CMAKE_INSTALL_PREFIX}/share/antiquacrm/data")
  SET (INCLUDE_ANTIQUACRM_DEVEL "")
ENDIF (ANTIQUA_DEVELOPEMENT)

## Zlib
FIND_PACKAGE(ZLIB REQUIRED libzlib)
IF (NOT ZLIB_FOUND)
 MESSAGE (FATAL_ERROR "AntiquaCMD: Requires gzip compression for Network connections!")
ENDIF (NOT ZLIB_FOUND)

SET(PROJECT_BINDINGS
 Core
 Network
 Sql
 Xml
)

FIND_PACKAGE(QT NAMES Qt5 REQUIRED COMPONENTS ${PROJECT_BINDINGS})
FIND_PACKAGE(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS ${PROJECT_BINDINGS})

SET (ANTIQUABUILD_SOURCE_DIR
  ${CMAKE_CURRENT_SOURCE_DIR}/src
)

ADD_SUBDIRECTORY (src)
ADD_SUBDIRECTORY (scripts)

##EOF
